# KDE-System76-Power

./: CMakeLists.txt  README.MD  com.system76.PowerDaemon.xml  sysbuilddeps.txt
plasmoid/: CMakeLists.txt  metadata.desktop
plasmoid/contents/ui/: main.qml
plugin/: CMakeLists.txt  qmldir
plugin/src/: Connection.cpp  Connection.hpp  QmlPlugin.cpp  QmlPlugin.hpp
